# ai-drug-screening-platform

./: .env.example  .gitignore  CODE_REVIEW_REPORT.md  LICENSE  README.md  TESTS.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  fix_biginteger.py  init.sql  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  analysis_agent.py  base.py  database_agent.py  docking_agent.py  molecule_agent.py  planner_agent.py  ranking_agent.py  report_agent.py
backend/app/api/: __init__.py  admin.py  auth.py  libraries.py  molecule.py  project.py  receptor.py  report.py  screening.py
backend/app/core/: __init__.py  config.py  constants.py  database.py  exceptions.py  logger.py  milvus.py  minio.py  redis.py  security.py
backend/app/domain/: __init__.py
backend/app/events/: __init__.py
backend/app/models/: __init__.py  agent.py  analysis.py  audit.py  docking.py  molecule.py  project.py  receptor.py  report.py  screening.py  user.py
backend/app/repositories/: __init__.py  screening_repo.py
backend/app/schemas/: __init__.py  auth.py  common.py  molecule.py  report.py  screening.py
backend/app/scripts/: import_drugbank.py
backend/tests/: conftest.py  test_api_admin.py  test_api_auth.py  test_api_jobs.py  test_api_molecules.py  test_api_projects.py  test_api_receptors.py  test_api_reports.py  test_api_screening.py  test_concurrency.py  test_error_codes.py  test_langgraph_agents.py  test_langgraph_workflow.py  test_models.py  test_schemas.py  test_services.py  test_tools.py
e2e/: conftest.py  (+1 more)
(+112 files in other folders)
